alpm-srcinfo/tests/parse_error_snapshots/invalid_pkver.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\t# The pkgver is definitely **not** valid\n\tpkgver = 🐀1.0.0\n\tpkgrel = 1\n\npkgname = test\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid character
  | 
2 |  # The pkgver is definitely **not** valid
3 |  pkgver = 🐀1.0.0
  |           ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
4 |  pkgrel = 1
  | 
  = while parsing:
    package_base_line: (pkgver = 🐀1.0.0)
    └ package build exclusive property: ( = 🐀1.0.0)
      └ alpm-pkgver: (🐀1.0.0)
        → invalid character
        → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
